k8s/redis/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: mini

spec:
  clusterIP: None

  selector:
    app: redis

  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
